ligolang/src/test/contracts/negative/vars_consts/match.jsligo
type parameter =
| ["Add", int]
| ["Sub", int];

let main = ([action, store]: [parameter, int]) : int => {
  let store2 = match (action, {
    Add: (n: int) => { n = 42; return n; },
    Sub: (n: int) => { n = 42; return -n; }
  });  
  return store2;
};
